Test: Har ändrat namn på bloggposter till blogginlägg

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@
       <div class="wrapper">
          <div class="left-post-wrapper">
             <div class="blog-posts-navigation">
-               <h3>Bloggposter</h3>
+               <h3>Blogginlägg</h3>
                <ul>
                   <li><a href="">asd</a></li>
                   <li><a href="">cxz</a></li>
