startsidans struktur och några bilder. tema påbörjad struktur

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,31 +4,45 @@
 
 <footer>
    <div class="wrapper">
-      <div class="footer-section">
-         <h3 class="footer-section-header">Om projektet</h3>
-         <ul>
-            <li>qwerty zxc asd</li>
-            <li>qwerty zxc asd</li>
-            <li>qwerty zxc asd</li>
-         </ul>
-      </div>
-      <div class="footer-section">
-         <h3 class="footer-section-header">Om forskargruppen</h3>
-         <ul>
-            <li>qwerty zxc asd</li>
-            <li>qwerty zxc asd</li>
-            <li>qwerty zxc asd</li>
-         </ul>
-      </div>
-      <div class="footer-section">
-         <h3 class="footer-section-header">Kontakta oss</h3>
-         <ul>
-            <li>qwerty zxc asd</li>
-            <li>qwerty zxc asd</li>
-            <li>qwerty zxc asd</li>
-         </ul>
-      </div>
+      <div class="footer-parent">
 
+         <div class="footer-sections">
+            <div class="footer-section">
+               <h3 class="footer-section-header">Projektet</h3>
+               <ul>
+                  <li>qwerty zxc asd</li>
+                  <li>qwerty zxc asd</li>
+                  <li>qwerty zxc asd</li>
+               </ul>
+            </div>
+            <div class="footer-section">
+               <h3 class="footer-section-header">Forskargruppen</h3>
+               <ul>
+                  <li>qwerty zxc asd</li>
+                  <li>qwerty zxc asd</li>
+                  <li>qwerty zxc asd</li>
+               </ul>
+            </div>
+            <div class="footer-section">
+               <h3 class="footer-section-header">Kontakta oss</h3>
+               <ul>
+                  <li>qwerty zxc asd</li>
+                  <li>qwerty zxc asd</li>
+                  <li>qwerty zxc asd</li>
+               </ul>
+            </div>
+         </div>
+         <div class="footer-logos">
+            <div class="footer-logo">
+               <img class="footer-logo-bildetg" src="/assets/img/etg.png" alt="Etg" />
+            </div>
+            <div class="footer-logo">
+               <img class="footer-logo-bildliu" src="/assets/img/liulogga.png" alt="liu" />
+            </div>
+            <div class="footer-logo">
+               <img class="footer-logo-bildlu" src="/assets/img/lulogga.png" alt="lu" />
+            </div>
+         </div>
+      </div>
    </div>
-
 </footer>
