--- a/_layouts/start.html
+++ b/_layouts/start.html
@@ -3,7 +3,8 @@
 
 {% include head.html %}
 
-<body>
+<body class="start-body">
+   {% include banner.html %}
    {% include header.html %}
 
    <div class="page-content">
