--- a/assets/css/1-tools/_-tools-index.sass
+++ b/assets/css/1-tools/_-tools-index.sass
@@ -1,4 +1,6 @@
 @import 'bourbon/bourbon'
+@import '../2-base/grid-settings'
 @import 'neat/neat'
 @import 'normalize'
 @import 'fonts'
+@import 'embeddedvideo'
