--- a/assets/css/2-base/_structure.sass
+++ b/assets/css/2-base/_structure.sass
@@ -1,6 +1,8 @@
-// .page-content
-//    +size(100% 100%)
-//    background: yellow
-// .wrapper
-//    +size(300px auto)
-//    background: coral
+$header-height: 9vh
+$header-margin: 62px
+
+$large-screen-up: new-breakpoint(min-width $large-screen 12)
+$medium-screen-up: new-breakpoint(min-width $medium-screen 12)
+
+$tablet: new-breakpoint(max-width $large-screen 8)
+$desktop: new-breakpoint(min-width $large-screen 12)
