--- a/assets/css/1-tools/neat/_neat-helpers.scss
+++ b/assets/css/1-tools/neat/_neat-helpers.scss
@@ -1,8 +1,8 @@
-// Functions
+// // Functions
 @import "functions/private";
 @import "functions/new-breakpoint";
-
-// Settings
+//
+// // Settings
 @import "settings/grid";
 @import "settings/visual-grid";
 @import "settings/disable-warnings";
