--- a/assets/css/1-tools/neat/settings/_visual-grid.scss
+++ b/assets/css/1-tools/neat/settings/_visual-grid.scss
@@ -10,13 +10,13 @@ $visual-grid: false !default;
 ///
 /// @type Color
 
-$visual-grid-color: #eee !default;
+$visual-grid-color: lightgreen !default;
 
 /// Sets the `z-index` property of the visual grid. Can be `back` (behind content) or `front` (in front of content). Set with `!global` flag.
 ///
 /// @type String
 
-$visual-grid-index: back !default;
+$visual-grid-index: front !default;
 
 /// Sets the opacity property of the visual grid. Set with `!global` flag.
 ///
