--- a/assets/css/2-base/_grid-settings.scss
+++ b/assets/css/2-base/_grid-settings.scss
@@ -1,14 +1,11 @@
-@import "neat-helpers"; // or "../neat/neat-helpers" when not in Rails
+@import "../1-tools/neat/neat-helpers"; // or "../neat/neat-helpers" when not in Rails
 
 // Neat Overrides
-// $column: 90px;
-// $gutter: 30px;
-// $grid-columns: 12;
-// $max-width: em(1088);
+// $column: em(40px);
+// $gutter: em(10px);
+$grid-columns: 12;
+$max-width: em(1088);
 
 // Neat Breakpoints
 $medium-screen: em(640);
-$large-screen: em(860);
-
-$medium-screen-up: new-breakpoint(min-width $medium-screen 4);
-$large-screen-up: new-breakpoint(min-width $large-screen 8);
+$large-screen: em(960);
