--- a/assets/css/4-page-layouts/_test.sass
+++ b/assets/css/4-page-layouts/_test.sass
@@ -1,20 +1,64 @@
+h1,h2,h3,h4
+   margin: 0
+   padding: 10px 0
+
+iframe
+   +size(900px 600px)
+   box-shadow: 1px 1px 4px black
+
 html
    height: 100%
    position: relative
+body.start-body
+   padding-top: 91vh
+   // padding-top: calc(100vh - 63px)
 
-body
-   padding: 0px
-   margin: 0px
-   // border: 5px solid red
+.overlay-olive
+   background: fade-out(olive, 0.86)
+   +size(100%)
+.round
+   border-radius: 50%
 
+.banner
+   //fixed -> bilden stanar och körs över
+   position: relative
+   position: fixed
+   z-index: -10
+   top: 0px
+   width: 100%
+   height: 100vh
+   background: honeydew
+   background-image: url("/assets/img/kids.jpg")
+   background-size: cover
+   background-repeat: no-repeat
+   .overlay-olive
+      +flex(1)
+      +display(flex)
+      +flex-direction(row)
+      +justify-content(center)
+      h1
+         // margin-top: calc(50vh - 63px)
+         margin-top: 40px
+         color: $white
+         font:
+            size: 70px
+
+.page-content
+   // min-height: calc(100vh - 63px)
+   // min-height: 91vh
+   position: relative
+   background: rgba(0,0,0,0)
+   margin-top: $header-margin
 .wrapper
    @include outer-container
-   background-color: #999
+   // border: 2px dashed #bbb
+   border-top: none
+   border-bottom: none
+   // background-color: #999
 
 .page-content > .wrapper
-   padding: 10px 0px
-   background: #f9f9f9
-   height: 1000px
+
+   background: $section-bg-0
 
 .blog-post
    // background: #f4f4f4
