--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -3,5 +3,5 @@
 ---
 @import '1-tools/-tools-index'
 @import '2-base/-base-index'
-// @import '3-modules/-modules-index'
+@import '3-modules/-modules-index'
 @import '4-page-layouts/-page-layouts-index'
