--- a/assets/css/4-page-layouts/_header.sass
+++ b/assets/css/4-page-layouts/_header.sass
@@ -21,6 +21,8 @@
    opacity: 0.0
    background: rgba(0,0,0,0)
 header
+   @media print
+      display: none
    *
       margin: 0px
       padding: 0px
