--- a/assets/css/4-page-layouts/_themes.sass
+++ b/assets/css/4-page-layouts/_themes.sass
@@ -42,7 +42,7 @@
       // @include flex(1)
 
 #themes-intro-section
-   background: tomato
+   background: darken($section-bg-3, 0)
    color: lighten($light-text, 10)
 
 #themes-section
@@ -86,7 +86,7 @@
          div
             // background: red
             // display: inline-block
-            min-height: 200px
+            min-height: 300px
             +span-columns(6)
             // @include flex-basis(20em)
             // @include flex-grow(1)
@@ -117,24 +117,25 @@
             +shift(6)
             padding-left: 10px
             h3
-               color: red
+               color: $semi-dark-gray
                text-align: left
                padding-bottom: 2px
-               font-size: 24px
+               font-size: 20px
                span
-
                   color: lighten($dark-text, 10)
                   font:
-                     size: 22px
+                     size: 18px
                      weight: 300
                padding-top: 0px
             p
                padding-left: 2px
+               margin-bottom: 50px
                word-wrap: break-word
             a
-               // position: absolute
-               width: 100%
-               // bottom: 0
+               position: absolute
+               bottom: 10px
+               right: 10px
+               width: calc(50% - 22px)
                color: fade-out($dark-text, 0.12)
                font:
                   size: 1.1em
