--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,13 +6,13 @@
       </div>
       <nav>
          <ul>
-            <li><a id="navLink1" class="" href="/about/#header">Start</a></li>
+            <li><a id="navLink1" class="" href="/#header">Start</a></li>
             <li><a id="navLink2" href="/themes">Teman</a></li>
-            <li><a id="navLink3" href="/">Digitala läromedel</a></li>
-            <li><a id="navLink4" href="">Demo</a></li>
-            <li><a id="navLink5" href="">Artiklar</a></li>
-            <li><a id="navLink6" href="">Nyheter</a></li>
-            <li><a id="navLink7" href="#liu-section">Om Oss</a></li>
+            <li><a id="navLink3" >Digitala läromedel</a></li>
+            <li><a id="navLink4" >Demo</a></li>
+            <li><a id="navLink5" >Artiklar</a></li>
+            <li><a id="navLink6" >Nyheter</a></li>
+            <li><a id="navLink7" >Om Oss</a></li>
             <!-- <li><a href="">Kontakt</a></li> -->
          </ul>
       </nav>
