--- a/assets/css/4-page-layouts/_about.sass
+++ b/assets/css/4-page-layouts/_about.sass
@@ -16,6 +16,8 @@
       background: $section-bg-0
    &:nth-child(3)
       background: $section-bg-5
+   &:nth-child(4)
+      background: $section-bg-4
    //    color: $light-text
    // &:nth-child(3n)
    //    background: $section-bg-3
@@ -66,6 +68,15 @@
                      size: 20px
                      weight: 200
                   margin: 15px 0
+               ul
+                  list-style: none
+               li
+                  font:
+                     size: 30px
+                     weight: 500
+                     // strong
+
+                  margin: 0 0 12px
 
                a
 
