improved project (minor), changed startpage navbar

--- a/assets/css/2-base/_colors.sass
+++ b/assets/css/2-base/_colors.sass
@@ -40,4 +40,7 @@ $footer-bg: $header-bg
 $header-color: $dark-text
 $footer-color: $light-text
 
-$nav-accent: $orange
+$link-color: $light-blue
+
+$accent-color: $orange
+$nav-accent: $accent-color
