--- a/assets/css/4-page-layouts/_header.sass
+++ b/assets/css/4-page-layouts/_header.sass
@@ -28,7 +28,8 @@ header
       padding: 0px
    box-shadow: 1px 1px 1px #777
 
-   position: relative
+   position: fixed
+   top: 0
    margin-bottom: -62px
    z-index: 100
 
