--- a/assets/css/4-page-layouts/_index.sass
+++ b/assets/css/4-page-layouts/_index.sass
@@ -15,7 +15,7 @@
    &:nth-child(2)
       background: $section-bg-0
    &:nth-child(3)
-      background: $section-bg-5
+      background: $section-bg-3
    &:nth-child(4)
       background: $section-bg-4
    //    color: $light-text
@@ -61,8 +61,9 @@
                   margin: 0px 0px -6px
                   padding-bottom: 0px
                   font:
+                     // family: $sans-serif
                      size: 50px
-                     weight: 200
+                     weight: 300
                p
                   font:
                      size: 20px
