--- a/assets/css/1-tools/_fonts.scss
+++ b/assets/css/1-tools/_fonts.scss
@@ -2,5 +2,8 @@
 //   font-family: 'Open Sans';
 //   font-style: normal;
 //   font-weight: 400;
-//   src: local('Open Sans'), local('OpenSans'), url(themes.googleusercontent.com/static/fonts/opensans/v8/cJZKeOuBrn4kERxqtaUH3bO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
+//   src: url(themes.googleusercontent.com/static/fonts/opensans/v8/cJZKeOuBrn4kERxqtaUH3bO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
 // }
+//
+$sans-serif: 'Open Sans', sans-serif;
+$serif: 'Roboto Slab', serif;
