--- a/assets/css/2-base/_variables.scss
+++ b/assets/css/2-base/_variables.scss
@@ -1,6 +1,11 @@
+
+
+$action-color: red;
+
+
 // Typography
 $base-font-family: $helvetica;
-$heading-font-family: $base-font-family;
+$heading-font-family: $sans-serif;
 
 // Font Sizes
 $base-font-size: 1em;
@@ -18,8 +23,6 @@ $base-z-index: 0;
 // Font Colors
 $base-background-color: #fff;
 $base-font-color: $dark-gray;
-$action-color: red;
-
 
 // Border
 $base-border-color: $light-gray;
