--- a/assets/css/2-base/_colors.sass
+++ b/assets/css/2-base/_colors.sass
@@ -18,7 +18,10 @@ $light-blue: #0CBFF2
 
 $flamingo-pink: #FF8572
 $green: #9EDD7E
+$yellow: rgb(255,216,10)
 $light-teal: #7EC9DD
+
+$medium-teal: #6AB4C1
 
 $blue: #6892F5
 $funky-carrot: #FF794B
@@ -28,12 +31,14 @@ $water-blue: #6CB9F7
 
 $section-bg-0: $white
 $section-bg-1: $soft-gray
-$section-bg-2: $dark-blue
+$section-bg-2: $flamingo-pink
 $section-bg-3: $dark-teal
-$section-bg-4: $light-blue
+$section-bg-4: $medium-teal
 $section-bg-5: $orange
 
-$header-bg: #eee
+$media-box-bg: #f7f7f7
+
+$header-bg: #ececec
 $header-bg-trans: transparentize($header-bg, 0.8)
 $footer-bg: $header-bg
 
