--- a/assets/css/2-base/_variables.scss
+++ b/assets/css/2-base/_variables.scss
@@ -10,6 +10,10 @@ $heading-font-family: $sans-serif;
 // Font Sizes
 $base-font-size: 1em;
 
+//font weights
+$bold: 700;
+$thin: 300;
+
 // Line height
 $base-line-height: 1.5;
 $heading-line-height: 1.2;
