--- a/assets/css/4-page-layouts/_theme.sass
+++ b/assets/css/4-page-layouts/_theme.sass
@@ -5,20 +5,26 @@
 
 .theme
    width: 80%
-   text-align: center
+   text-align: left
+   color: $dark-text
+   margin: 0px auto
+   padding: 0px
    @media print
       text-align: left
       background-color: white
-
-   margin: 0px auto
-   // background: coral
-   padding: 0px
    a
       @media print
+         width: 100%
          color: black
          pointer-events: none
          cursor: default
    h1
+      @extend .thin-heading
+      color: $dark-text
+      // font-size: 50px
+      +media($tablet)
+         // font-size: 36px
+         padding-top: 20px
       padding: 20px 0 0px
       margin-bottom: 0px
       @media print
@@ -28,34 +34,35 @@
          display: none
       padding: 0px
       margin: 10px 2px
+      height: 1px
+      border-width: 0
+      color: $accent-color
+      background-color: $accent-color
    p
+      text-align: left
       margin: 10px 0
       @media print
          font-family: $serif
          font-weight: 400
          line-height: 1.8em
          margin-top: 4px
-         // line-height: 2.0
-
+         // line-height: 1.5
    .video-wrapper
       @media print
          display: none
    iframe
       margin-bottom: 100px
-
-   h1,h2,h3,h4
-      font-family: $helvetica
-      color: $semi-dark-gray
-   h1, h2
-      font-family: $serif
-      font-weight: 400
-      margin-top: 6px
    h2
       margin: 20px 0 10px
       @media print
          // margin-bottom: 5px
    h3
       font-style: italic
+   h4
+      @extend .thick-heading
+      font-size: 18px
+      padding: 0
+
 .theme-nav
    @media print
       display: none
@@ -77,7 +84,7 @@
          i
             margin: 0 10px 0 0
       &:hover
-         background-color: darken($header-bg,2)
+         background-color: darken($header-bg,4)
          i
             // color: $funky-carrot
 
