--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,16 @@
       </div>
       <nav>
          <ul>
-            <li><a id="navLink1" class="" href="/#header">Start</a></li>
-            <li><a id="navLink2" href="/themes">Teman</a></li>
-            <li><a id="navLink3" >Digitala läromedel</a></li>
+            <!-- {% for node in site.pages %}
+            {% if page.url == node.url %}
+            <li class="active"><a href="{{node.url}}" class="active">{{node.title}}</a></li>
+            {% else %}
+            <li><a href="{{node.url}}">{{node.title}}</a></li>
+            {% endif %}
+            {% endfor %} -->
+            <li><a id="navLink1" {% if page.url == '/' %}class="nav-item-active"{% endif %} href="/"> Start </a></li>
+            <li><a id="navLink2" {% if page.url == '/themes/' %}class="nav-item-active"{% endif %} href="/themes/">Teman</a></li>
+            <li><a id="navLink3" {% if page.url == '/recommendations/' %}class="nav-item-active"{% endif %} href="/recommendations/"> Rekomenderade Digitala Läromedel</a></li>
             <li><a id="navLink4" >Demo</a></li>
             <li><a id="navLink5" >Artiklar</a></li>
             <li><a id="navLink6" >Nyheter</a></li>
