--- a/assets/css/2-base/_typography.scss
+++ b/assets/css/2-base/_typography.scss
@@ -1,7 +1,7 @@
 // $sans-serif =  'Open Sans'
 // $serif = 'Roboto Slab'
 // $helvetica =  'Helvetica Nue'
-   
+
 body {
   @include font-feature-settings("kern", "liga", "pnum");
   -webkit-font-smoothing: antialiased;
@@ -21,6 +21,21 @@ h6 {
   // font-size: $base-font-size;
   line-height: $heading-line-height;
   margin: 0 0 $small-spacing;
+  font-weight: $bold;
+}
+.thin-heading{
+   @extend h1;
+   font-weight: $thin;
+   font-size: 50px;
+   color: $light-text;
+   margin: 0px 0px 0px;
+}
+.thick-heading{
+   @extend h1;
+   font-weight: $bold;
+   font-size: 50px;
+   color: $dark-text;
+   margin: 0px 0px 0px;
 }
 
 p {
@@ -44,6 +59,34 @@ a,.link {
      outline: none;
    }
 }
+a.category-link{
+   font-weight: $bold;
+   color: $medium-gray;
+   padding-top: 0px;
+   border-bottom: 4px solid $orange;
+   display: inline-block;
+   margin-right: 3px;
+   // text-transform: uppercase;
+   &.math-link{
+      border-color: $green;
+   }
+   &.swe-link{
+      border-color: $yellow;
+   }
+   &.eng-link{
+      border-color: tomato;
+   }
+   &.junior-link{
+      border-color: lighten($dark-blue,30)
+   }
+   &.middle-link{
+      border-color: lighten($dark-blue,20)
+   }
+   &.senior-link{
+      border-color: fade-out($dark-blue, 0.1);
+   }
+}
+
 
 
 // hr {
