--- a/assets/css/4-page-layouts/_index.sass
+++ b/assets/css/4-page-layouts/_index.sass
@@ -8,16 +8,16 @@
 
    color: $light-text
 
-   background: $section-bg-5
+   background: $section-bg-1
    &:nth-child(1)
-      background: $section-bg-3
+      background: $white
       // margin-top: 62px
    &:nth-child(2)
-      background: $section-bg-0
+      background: $medium-teal
    &:nth-child(3)
-      background: $section-bg-3
+      background: $dark-teal
    &:nth-child(4)
-      background: $section-bg-4
+      background: $white
    //    color: $light-text
    // &:nth-child(3n)
    //    background: $section-bg-3
@@ -58,12 +58,7 @@
                +flex-direction(column)
                +justify-content(space-between)
                h3
-                  margin: 0px 0px -6px
-                  padding-bottom: 0px
-                  font:
-                     // family: $sans-serif
-                     size: 50px
-                     weight: 300
+                  @extend .thin-heading
                p
                   font:
                      size: 20px
@@ -80,7 +75,8 @@
                   margin: 0 0 12px
 
                a
-
+                  @extend .thick-heading
+                  line-height: $heading-line-height*1.7
                   color: fade-out($light-text, 0.12)
                   padding: 0px
                   // -webkit-hyphens: auto
@@ -117,24 +113,33 @@
                   +justify-content(flex-start)
                padding: 30px 0px
                .img
-                  +size(320px)
+                  +size(40vw)
+                  min-width: 280px
+                  min-height: 280px
+                  // margin-left: -30%
                .info
                   +span-columns(4)
                   // padding: 0px
 
          &#liu-section
             .info
-
-               color: $dark-text
+               // color: lighten($dark-text,15%)
+               // color: darken($dark-teal,5%)
+               // color: $light-text
                a
-                  color: fade-out($dark-text, 0.14)
+                  // color: fade-out($dark-text, 0.14)
                   div
-                     border-color: $dark-text
-                     border-color: fade-out($dark-text, 0.25)
+                     +transition(background .5s)
+                     // border-color: $dark-text
+                     // border-color: fade-out($dark-text, 0.25)
                   &:hover
-                     color: darken($water-blue, 30)
+                     color: $medium-teal
                      div
-                        border-color: darken($water-blue, 30)
+                        border-color: fade-out($light-text, 0)
+                        background: fade-out($light-text, 0)
+                     // color: darken($water-blue, 30)
+                     div
+                        // border-color: darken($water-blue, 30)
                         // background: fade-out(lightblue,0.9)
 
             .img
@@ -143,6 +148,35 @@
                   size: cover
                   repeat: no-repeat
                   position: 50% 50%
+
+         &#liu-section2
+            @extend #liu-section
+
+            //förslag - banta innehållet i textmängd på tabletversionen
+            .p-tablet
+               display: none
+            .p-desktop
+               display: inline-block
+            +media($tablet)
+               .p-tablet
+                  display: inline-block
+               .p-desktop
+                  display: none
+
+            .info
+               h1
+                  color: $dark-text
+               color: $dark-text
+               a
+                  +transition(color .3s)
+                  color: fade-out($dark-text, 0.14)
+                  div
+                     border-color: fade-out($dark-text, 0.24)
+                  &:hover
+                     color: $accent-color
+                     div
+                        border-color: fade-out($dark-text, 0.24)
+                        background: $white
 
          // &#children-computer-section
          //    position: relative
@@ -158,13 +192,16 @@
          //       // background-image: url("http://yourlivingcity.com/stockholm/wp-content/uploads/2011/11/granefelt-girls+with+a+computer+-916.jpg")
 
          &#child-ipad-section
+
             .info>a
+               div
+                  +transition(background .5s)
                text-align: left
                &:hover
                   color: $dark-teal
                   div
-                     border-color: fade-out($light-text, 1)
-                     background: fade-out($light-text, 0.2)
+                     border-color: fade-out($light-text, 0)
+                     background: fade-out($light-text, 0)
             .img
                background:
                   image: url("http://macgenesis.net/wp-content/uploads/2011/10/ipad-in-school-2.jpg")
@@ -175,9 +212,9 @@
                box-shadow: -2px 1px 4px #333
 #children-computer-parent
 
-   background-color: tomato
+   // background-color: $white
+
    background-size: cover
-   // background-size: 100%
    background-position: 50%-50%
    background-repeat: no-repeat
    background-image: url("http://yourlivingcity.com/stockholm/wp-content/uploads/2011/11/granefelt-girls+with+a+computer+-916.jpg")
@@ -189,7 +226,7 @@
          position: relative
          +display(flex)
          //background: red
-         min-height: 500px
+         min-height: 560px
          height: 100%
          +justify-content(center)
          +align-items(flex-end)
@@ -213,7 +250,6 @@
             .info
                padding: 10px 40px 20px
                margin: 0px
-               // background: blue
                +fill-parent
                // position: relative
                // width: 500px
@@ -225,11 +261,13 @@
                a
                   color: fade-out($light-text, 0)
                   div
+                     +transition(background,border-color .3s)
                      border-color: fade-out($light-text, 0)
                   &:hover
                      z-index: 15
                      color: fade-out($light-text, 0)
                      div
+
                         z-index: 10
                         background: fade-out($dark-text, 0.2)
                         border-color: fade-out($light-text, 0.99)
